force-app/main/default/objects/Referentiel_d_anomalies__c/Referentiel_d_anomalies__c.object-meta.xml
<CustomObject>
    <label>Référentiel d&apos;anomalies</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nom de Référentiel d&apos;anomalies</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Référentiel d&apos;anomalies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>