force-app/main/default/objects/Referentiel_d_anomalies__c/fields/Criticite__c.field-meta.xml
<CustomField>
    <fullName>Criticite__c</fullName>
    <label>Criticité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>