force-app/main/default/objects/Referentiel_d_anomalies__c/fields/Equipement__c.field-meta.xml
<CustomField>
    <fullName>Equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Référentiel d&apos;anomalies</relationshipLabel>
    <relationshipName>Referentiel_d_anomalies</relationshipName>
    <type>Lookup</type>
</CustomField>