force-app/main/default/objects/Referentiel_d_anomalies__c/fields/Libelle__c.field-meta.xml
<CustomField>
    <fullName>Libelle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Libellé</label>
    <length>150</length>
    <type>Text</type>
</CustomField>