force-app/main/default/objects/Referentiel_d_anomalies__c/fields/Type_d_equipements__c.field-meta.xml
<CustomField>
    <fullName>Type_d_equipements__c</fullName>
    <label>Type d&apos;équipements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poste</fullName>
            </value>
            <value>
                <fullName>Beacon</fullName>
            </value>
            <value>
                <fullName>Carte SIM</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Ordinateur</fullName>
            </value>
            <value>
                <fullName>Pager</fullName>
            </value>
            <value>
                <fullName>Périphérique</fullName>
            </value>
            <value>
                <fullName>Tablette</fullName>
            </value>
            <value>
                <fullName>Téléphone portable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>