force-app/main/default/objects/Referentiel_d_anomalies__c/fields/Type_de_defaut__c.field-meta.xml
<CustomField>
    <fullName>Type_de_defaut__c</fullName>
    <label>Type de défaut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Défaut mineur</fullName>
            </value>
            <value>
                <fullName>Défaut majeur</fullName>
            </value>
            <value>
                <fullName>Défaut bloquant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>